--- a/build.gradle
+++ b/build.gradle
@@ -141,22 +141,22 @@ tasks.register('syncSandboxIdeConf', Copy) {
     }
 }
 
-tasks.register('rmLspNodeModules', Delete) {
-    def cdsLspFromTar = provider {
-        return project.findProperty('local.cdsLspFromTar') == 'true'
+tasks.register('rmCdsLspNodeModules', Delete) {
+    def localRmCdsLspNodeModules = provider {
+        return project.findProperty('local.rmCdsLspNodeModules') == 'true'
     }
-    onlyIf { cdsLspFromTar.get() }
+    onlyIf { localRmCdsLspNodeModules.get() }
     mustRunAfter prepareSandbox, prepareSandbox_runWebStorm
-    delete 'lsp/node_modules'
+    delete 'lsp/node_modules/@sap/cds-lsp'
 }
 
 tasks.register('installLsp', Exec) {
     def noNodeModules = provider {
         // re-evaluated on each gradle run
-        return !file('lsp/node_modules/@sap/cds-lsp').exists() || project.findProperty('local.cdsLspFromTar') == 'true'
+        return !file('lsp/node_modules/@sap/cds-lsp').exists() || project.findProperty('local.rmCdsLspNodeModules') == 'true'
     }
     onlyIf { noNodeModules.get() }
-    dependsOn rmLspNodeModules
+    dependsOn rmCdsLspNodeModules
     workingDir './lsp'
     if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
         commandLine 'cmd', '/c', 'npm', 'install', '--no-package-lock'
