--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,9 @@ The set of features will grow with future releases, aligned with the development
         <lang.substitutor language="cds" order="first"
                           implementationClass="com.sap.cap.cds.intellij.lang.CdsLanguageSubstitutor"/>
 
+        <lang.syntaxHighlighterFactory language="cds"
+                                       implementationClass="com.sap.cap.cds.intellij.CdsSyntaxHighlighterFactory"/>
+
         <langCodeStyleSettingsProvider
                 implementation="com.sap.cap.cds.intellij.codestyle.CdsLanguageCodeStyleSettingsProvider"/>
 
