build: don't use package-lock to avoid tgz inconsistencies
`npm i` doesn't update the hash of a tgz-type dependency in package-lock.json, so outdated content gets installed from the cache (if the version number of the dependency hasn't changed). This would prevent working with a local cds-lsp snapshot.

--- a/build.gradle
+++ b/build.gradle
@@ -162,9 +162,9 @@ tasks.register('installLsp', Exec) {
     dependsOn rmCdsLspNodeModules
     workingDir './lsp'
     if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-        commandLine 'cmd', '/c', 'npm', 'ci'
+        commandLine 'cmd', '/c', 'npm', 'install', '--no-package-lock'
     } else {
-        commandLine 'sh', '-c', 'npm ci'
+        commandLine 'sh', '-c', 'npm install --no-package-lock'
     }
 }
 
