--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -73,7 +73,7 @@ The set of features will grow with future releases, aligned with the development
 
     <change-notes><![CDATA[ <h3>Added</h3>
 <ul>
-    <li>CDS Formatting Options can now be configured under Settings > Editor > Code Style > CDS.</li>
+    <li>CDS Formatting Options can now be configured under Settings > Editor > Code Style > CDS. Options depending on a switched-off option are disabled.</li>
 </ul>
 <h3>Changed</h3>
 <ul>
