--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'org.apache.maven:maven-artifact:3.9.9'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.0'
     testCompileOnly 'junit:junit:4.13.2'
+    testCompileOnly 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testCompileOnly 'org.mockito:mockito-core:5.12.0'
 
     intellijPlatform {
         String type = project.findProperty('platformType')
