--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 plugins {
     id 'java'
     id 'org.jetbrains.intellij.platform' version '2.0.1'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.21'
 }
 
 def hasLocalProperties = provider {
@@ -30,6 +31,7 @@ repositories {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains:annotations:26.0.1'
     implementation 'org.json:json:20240303'
     implementation 'org.apache.maven:maven-artifact:3.9.9'
@@ -108,6 +110,11 @@ tasks {
 
     test {
         dependsOn 'copyLspToInstrumented'
+        exclude '**/*TestBase.class'
+    }
+
+    jar {
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 
     publishPlugin {
