--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,8 +20,6 @@ The set of features will grow with future releases, aligned with the development
     <depends>NodeJS</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <vfs.asyncListener implementation="com.sap.cap.cds.intellij.codestyle.CdsPrettierJsonListener"/>
-
         <fileType
                 name="cds"
                 implementationClass="com.sap.cap.cds.intellij.CdsFileType"
@@ -32,56 +30,49 @@ The set of features will grow with future releases, aligned with the development
         <lang.substitutor language="cds" order="first"
                           implementationClass="com.sap.cap.cds.intellij.lang.CdsLanguageSubstitutor"/>
 
-        <lang.syntaxHighlighterFactory language="cds"
-                                       implementationClass="com.sap.cap.cds.intellij.CdsSyntaxHighlighterFactory"/>
-
         <langCodeStyleSettingsProvider
                 implementation="com.sap.cap.cds.intellij.codestyle.CdsCodeStyleSettingsProvider"/>
 
-        <formattingService implementation="com.sap.cap.cds.intellij.codestyle.CdsPreviewFormattingService"/>
+        <formattingService implementation="com.sap.cap.cds.intellij.codestyle.CdsCodeStylePreviewFormattingService"/>
 
         <platform.lsp.serverSupportProvider implementation="com.sap.cap.cds.intellij.lsp.CdsLspServerSupportProvider"/>
 
         <notificationGroup id="com.sap.cap.cds.intellij.notifications"
                            displayType="BALLOON"/>
+
+        <vfs.asyncListener implementation="com.sap.cap.cds.intellij.codestyle.CdsPrettierJsonListener"/>
+        <postStartupActivity implementation="com.sap.cap.cds.intellij.lifecycle.ProjectLifecycleListener"/>
     </extensions>
 
     <applicationListeners>
         <listener
                 topic="com.intellij.ide.AppLifecycleListener"
-                class="com.sap.cap.cds.intellij.textmate.CdsTextMateBundleManager"
-                activeInHeadlessMode="true" activeInTestMode="true"
-        />
-        <listener
-                topic="com.intellij.openapi.startup.StartupActivity"
-                class="com.sap.cap.cds.intellij.textmate.CdsTextMateBundleManager"
+                class="com.sap.cap.cds.intellij.lifecycle.IdeLifecycleListener"
                 activeInHeadlessMode="true" activeInTestMode="true"
         />
         <listener
                 topic="com.intellij.ide.plugins.DynamicPluginListener"
-                class="com.sap.cap.cds.intellij.textmate.CdsTextMateBundleManager"
+                class="com.sap.cap.cds.intellij.lifecycle.PluginLifecycleListener"
                 activeInHeadlessMode="true" activeInTestMode="true"
         />
     </applicationListeners>
-    <projectListeners>
-        <listener
-                topic="com.intellij.openapi.startup.ProjectActivity"
-                class="com.sap.cap.cds.intellij.textmate.CdsTextMateBundleManager"
-                activeInHeadlessMode="true" activeInTestMode="true"
-        />
-    </projectListeners>
 
     <change-notes><![CDATA[ <h3>Added</h3>
 <ul>
-    <li>CDS Formatting Options can now be configured under Settings > Editor > Code Style > CDS. Options depending on a switched-off option are disabled.</li>
+    <li>CDS Formatting Options can now be configured under Settings > Editor > Code Style > CDS.
+        <ul>
+            <li>A .cdsprettier.json file in the project root is kept in sync with the options for consumption by the cds-lsp server.
+            <li>Options depending on a switched-off option are disabled.
+        </ul>
+    </li>
 </ul>
 <h3>Changed</h3>
 <ul>
     <li>include @sap/cds-lsp 8.5.1 with the following changes since 8.4.3:
         <ul>
-            <li> enabling `newParser` via `cds.env` will no longer interfere with language server
-            <li> improved telemetry messages
-            <li> With `@sap/cds 8.5.0` one of the default locations for translation folders (`assets/i18n`) was removed
+            <li>enabling `newParser` via `cds.env` will no longer interfere with language server
+            <li>improved telemetry messages
+            <li>With `@sap/cds 8.5.0` one of the default locations for translation folders (`assets/i18n`) was removed
         </ul>
     </li>
 </ul> ]]></change-notes>
