--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -57,23 +57,12 @@ The set of features will grow with future releases, aligned with the development
         />
     </applicationListeners>
 
-    <change-notes><![CDATA[ <h3>Added</h3>
+    <change-notes><![CDATA[ <h3>Changed</h3>
 <ul>
-    <li>CDS Formatting Options can now be configured under Settings > Editor > Code Style > CDS.
-        <ul>
-            <li>A .cdsprettier.json file in the project root is kept in sync with the options for consumption by the cds-lsp server.
-            <li>Options depending on a switched-off option are disabled.
-        </ul>
-    </li>
+    <li>Only formatting settings differing from the default or previously contained in .cdsprettier.json are now stored in that file.
 </ul>
-<h3>Changed</h3>
+<h3>Fixed</h3>
 <ul>
-    <li>include @sap/cds-lsp 8.5.1 with the following changes since 8.4.3:
-        <ul>
-            <li>enabling `newParser` via `cds.env` will no longer interfere with language server
-            <li>improved telemetry messages
-            <li>With `@sap/cds 8.5.0` one of the default locations for translation folders (`assets/i18n`) was removed
-        </ul>
-    </li>
+    <li>The TextMate bundle for syntax highlighting is now correctly unregistered when the plugin is disabled or uninstalled.
 </ul> ]]></change-notes>
 </idea-plugin>
