--- a/gradle.properties
+++ b/gradle.properties
@@ -28,4 +28,7 @@ org.gradle.configuration-cache = true
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching = true
 
+org.gradle.jvmargs=-Xmx2g
+org.jetbrains.intellij.platform.useCacheRedirector=true
+
 javaVersion = 21
