Revert "chore: remove non-required step?"
This reverts commit 01ac941f5f97011db21c72a3dd564713d7ab0181.

--- a/.github/actions/gradle-run/action.yml
+++ b/.github/actions/gradle-run/action.yml
@@ -23,6 +23,16 @@ runs:
         echo "Home Directory: $HOME"
         echo "Gradle User Home: $GRADLE_USER_HOME"
 
+    - name: Install fontconfig
+      # required for headless gradle
+      run: |
+        apt-get -y update
+        apt-get -y install fontconfig
+      shell: bash
+      env:
+        DEBIAN_FRONTEND: noninteractive
+        TZ: Etc/UTC
+
     - uses: actions/setup-node@v4
       with:
         node-version: 20
