--- a/.github/actions/gradle-run/action.yml
+++ b/.github/actions/gradle-run/action.yml
@@ -36,7 +36,7 @@ runs:
           /root/.gradle/caches/modules-2
           /root/.gradle/caches/build-cache-1
           /root/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', 'gradle.properties', 'settings.gradle') }}
+        key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle', 'gradle.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
 
