--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -57,12 +57,8 @@ The set of features will grow with future releases, aligned with the development
         />
     </applicationListeners>
 
-    <change-notes><![CDATA[ <h3>Changed</h3>
+    <change-notes><![CDATA[ <h3>Fixed</h3>
 <ul>
-    <li>Only formatting settings differing from the default or previously contained in .cdsprettier.json are now stored in that file.
-</ul>
-<h3>Fixed</h3>
-<ul>
-    <li>The TextMate bundle for syntax highlighting is now correctly unregistered when the plugin is disabled or uninstalled.
+    <li>Create .cdsprettier.json only for CDS projects, determined by a .cds file being opened. This applies to the events of project create, project open, and settings confirmation.
 </ul> ]]></change-notes>
 </idea-plugin>
