Revert "ci: remove gradle task output from cache for speedup"
Saved only 45 MB cache size.

This reverts commit 2e268d87677e2175e2a0b46af7418d0ac8be056e.

--- a/.github/actions/gradle-run/action.yml
+++ b/.github/actions/gradle-run/action.yml
@@ -34,8 +34,9 @@ runs:
       with:
         path: |
           /root/.gradle/caches/modules-2
-          !~/.gradle/caches/modules-2/files-*
+          /root/.gradle/caches/build-cache-1
           /root/.gradle/wrapper
+          !~/.gradle/caches/modules-2/files-*
         key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle', 'gradle.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
