--- a/.github/actions/gradle-run/action.yml
+++ b/.github/actions/gradle-run/action.yml
@@ -29,18 +29,23 @@ runs:
         distribution: zulu
         java-version: 21
 
+
     - name: Cache Gradle dependencies
       uses: actions/cache@v3
       with:
         path: |
           /root/.gradle/caches/modules-2
+          !~/.gradle/caches/modules-2/files-*
           /root/.gradle/caches/build-cache-1
           /root/.gradle/wrapper
-          !~/.gradle/caches/modules-2/files-*
         key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle', 'gradle.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
 
+    - name: Debug cache size
+      run: |
+        [[ -d /root/.gradle ]] && find /root/.gradle -type f -exec du -h {} + | sort -rh | head -n 100 || true
+      shell: bash
 
     - name: Test
       if: ${{ contains(inputs.steps, 'test') }}
