--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,32 +20,32 @@ The set of features will grow with future releases, aligned with the development
     <depends>NodeJS</depends>
 
 
-<!--    <extensions defaultExtensionNs="com.intellij">-->
-<!--        <fileType-->
-<!--                name="cds"-->
-<!--                implementationClass="com.sap.cap.cds.intellij.CdsFileType"-->
-<!--                fieldName="INSTANCE"-->
-<!--                language="cds"-->
-<!--                extensions="cds"/>-->
+    <extensions defaultExtensionNs="com.intellij">
+        <fileType
+                name="cds"
+                implementationClass="com.sap.cap.cds.intellij.CdsFileType"
+                fieldName="INSTANCE"
+                language="cds"
+                extensions="cds"/>
 
-<!--        <lang.substitutor language="cds" order="first"-->
-<!--                          implementationClass="com.sap.cap.cds.intellij.lang.CdsLanguageSubstitutor"/>-->
+        <lang.substitutor language="cds" order="first"
+                          implementationClass="com.sap.cap.cds.intellij.lang.CdsLanguageSubstitutor"/>
 
-<!--        <langCodeStyleSettingsProvider-->
-<!--                implementation="com.sap.cap.cds.intellij.codestyle.CdsCodeStyleSettingsProvider"/>-->
+        <langCodeStyleSettingsProvider
+                implementation="com.sap.cap.cds.intellij.codestyle.CdsCodeStyleSettingsProvider"/>
 
-<!--        <formattingService implementation="com.sap.cap.cds.intellij.codestyle.CdsCodeStylePreviewFormattingService"/>-->
+        <formattingService implementation="com.sap.cap.cds.intellij.codestyle.CdsCodeStylePreviewFormattingService"/>
 
 <!--        <platform.lsp.serverSupportProvider implementation="com.sap.cap.cds.intellij.lsp.CdsLspServerSupportProvider"/>-->
 
 <!--        <notificationGroup id="com.sap.cap.cds.intellij.notifications"-->
 <!--                           displayType="BALLOON"/>-->
 
-<!--        <vfs.asyncListener implementation="com.sap.cap.cds.intellij.codestyle.CdsPrettierJsonListener"/>-->
-<!--        <postStartupActivity implementation="com.sap.cap.cds.intellij.lifecycle.ProjectLifecycleListener"/>-->
+        <vfs.asyncListener implementation="com.sap.cap.cds.intellij.codestyle.CdsPrettierJsonListener"/>
+        <postStartupActivity implementation="com.sap.cap.cds.intellij.lifecycle.ProjectLifecycleListener"/>
 
 
-<!--    </extensions>-->
+    </extensions>
 
     <depends>com.redhat.devtools.lsp4ij</depends>
 
@@ -54,18 +54,25 @@ The set of features will grow with future releases, aligned with the development
                 name="CDS Language Server"
                 factoryClass="com.sap.cap.cds.intellij.lsp4ij.CdsLanguageServerFactory">
             <description><![CDATA[
-        Some description written in HTML to display it in the LSP consoles view and Language Servers settings.
+        <h5>SAP CDS Language Support</h5>
         ]]>
             </description>
+
         </server>
 
         <fileNamePatternMapping patterns="*.cds;*.json"
                                 serverId="cds"
                                 languageId="cds"/>
 
-<!--        <languageMapping language="cds"-->
-<!--                         serverId="cds"-->
-<!--                         languageId="cds"/>-->
+        <languageMapping language="cds"
+                         serverId="cds"
+                         languageId="cds"/>
+
+
+
+<!-- TODO? e.g. csn or json       <languageMapping language="XML"-->
+<!--                         serverId="myLanguageServerId"-->
+<!--                         documentMatcher="my.language.server.MyDocumentMatcher"/>-->
     </extensions>
 
     <applicationListeners>
@@ -80,6 +87,15 @@ The set of features will grow with future releases, aligned with the development
                 activeInHeadlessMode="true" activeInTestMode="true"
         />
     </applicationListeners>
+
+
+    <actions>
+        <action id="cds.analyzeDependencies"
+                class="com.sap.cap.cds.intellij.command.AnalyzeDependenciesAction"/>
+
+    </actions>
+
+
 
     <change-notes><![CDATA[ <h3>Fixed</h3>
 <ul>
