--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -97,8 +97,8 @@ The set of features will grow with future releases, aligned with the development
 
 
 
-    <change-notes><![CDATA[ <h3>Fixed</h3>
+    <change-notes><![CDATA[ <h3>Added</h3>
 <ul>
-    <li>Create .cdsprettier.json only for CDS projects, determined by a .cds file being opened. This applies to the events of project create, project open, and settings confirmation.
+    <li>Adds support for <i>Community Editions</i> of IntelliJ IDEs</li>
 </ul> ]]></change-notes>
 </idea-plugin>
