chore: consume cds-lsp 8.8.1 with new parser support, bump version to beta

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 archiveName = cds-intellij.zip
 pluginRepositoryUrl = https://github.com/cap-js/cds-intellij
 # SemVer format -> https://semver.org
-pluginVersion = 2.0.0-alpha.4
+pluginVersion = 2.0.0-beta
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 242
