--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -105,6 +105,7 @@ The set of features will grow with future releases, aligned with the development
     <change-notes><![CDATA[
 <h3>Changed</h3>
 <ul>
-    <li>Consuming @sap/cds-lsp 8.8.1 using the new CDS parser support</li>
+    <li>Consuming @sap/cds-lsp 8.9.0</li>
+    <li>Consuming <a href="https://github.com/redhat-developer/lsp4ij/releases/tag/0.12.0">LSP4IJ 0.12.0</a> (which fixes some IDE freezes among others)</li>
 </ul> ]]></change-notes>
 </idea-plugin>
