--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,7 +17,7 @@ The set of features will grow with future releases, aligned with the development
     <depends>com.intellij.modules.platform</depends>
 <!--    <depends>com.intellij.modules.ultimate</depends>-->
     <depends>org.jetbrains.plugins.textmate</depends>
-<!--    <depends>NodeJS</depends>-->
+    <depends optional="true" config-file="withNodeJs.xml">NodeJS</depends>
 
 
     <extensions defaultExtensionNs="com.intellij">
@@ -105,7 +105,7 @@ The set of features will grow with future releases, aligned with the development
     <change-notes><![CDATA[
 <h3>Changed</h3>
 <ul>
-    <li>Consuming @sap/cds-lsp 8.9.0</li>
-    <li>Consuming <a href="https://github.com/redhat-developer/lsp4ij/releases/tag/0.12.0">LSP4IJ 0.12.0</a> (which fixes some IDE freezes among others)</li>
+    <li>Suitable Node.js interpreter is now found at first plugin start</li>
+    <li>Improved UX when setting Node.js interpreter path manually</li>
 </ul> ]]></change-notes>
 </idea-plugin>
