--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ platformVersion = 2025.1
 # platformPlugins =
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.14
+gradleVersion = 9.0.0-milestone-9
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 org.gradle.configuration-cache = true
