--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ import org.jetbrains.intellij.platform.gradle.tasks.VerifyPluginTask
 
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij.platform' version '2.0.1'
+    id 'org.jetbrains.intellij.platform' version '2.6.0'
     id 'org.jetbrains.kotlin.jvm' version '2.1.21'
 }
 
@@ -49,6 +49,7 @@ dependencies {
         bundledPlugins([
                 'com.intellij.java',
                 'NodeJS',
+                'JavaScript',
                 'org.jetbrains.plugins.textmate'
         ])
 
