--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,11 @@ dependencies {
         String version = project.findProperty('platformVersion')
         create(type, version)
 
-        bundledPlugins(['com.intellij.java', 'NodeJS', 'org.jetbrains.plugins.textmate'
-//                        , 'com.redhat.devtools.lsp4ij'
+        bundledPlugins([
+                'com.intellij.java',
+                'NodeJS',
+                'JavaScript',
+                'org.jetbrains.plugins.textmate'
         ])
 
         plugin("com.redhat.devtools.lsp4ij:0.12.0")
